force-app/main/default/objects/Address/fields/CSBD_CompraventaHipoteca__c.field-meta.xml
<CustomField>
    <fullName>CSBD_CompraventaHipoteca__c</fullName>
    <label>Compraventa hipoteca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solo hipoteca</fullName>
            </value>
            <value>
                <fullName>Solo compraventa</fullName>
            </value>
            <value>
                <fullName>Compraventa + Hipoteca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>