force-app/main/default/objects/Address/fields/CSBD_ImporteHipoteca__c.field-meta.xml
<CustomField>
    <fullName>CSBD_ImporteHipoteca__c</fullName>
    <formula>CSBD_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe de la hipoteca</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>