force-app/main/default/objects/Address/fields/CSBD_Localidad__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Localidad__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Localidad</label>
    <length>120</length>
    <type>Text</type>
</CustomField>