force-app/main/default/objects/Address/fields/CSBD_NumeroFinca__c.field-meta.xml
<CustomField>
    <fullName>CSBD_NumeroFinca__c</fullName>
    <label>Número de finca</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>