force-app/main/default/objects/Address/fields/CSBD_NumeroRP__c.field-meta.xml
<CustomField>
    <fullName>CSBD_NumeroRP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Número RP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>