force-app/main/default/objects/Address/recordTypes/CSBD_Finca.recordType-meta.xml
<RecordType>
    <fullName>CSBD_Finca</fullName>
    <active>true</active>
    <label>Finca (CSBD)</label>
</RecordType>